--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   	<junit.version>5.7.1</junit.version>
     <hamcrest.version>2.2</hamcrest.version>
     <selenium.version>3.141.59</selenium.version>
+    <cucumber.version>6.10.4</cucumber.version>
  </properties>
   
 <dependencies>
@@ -32,9 +33,24 @@
 		<groupId>org.seleniumhq.selenium</groupId>
 		<artifactId>selenium-java</artifactId>
 		<version>${selenium.version}</version>
-	</dependency>	
+	</dependency>
 
-</dependencies>
-  
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+	<dependency>
+		<groupId>io.cucumber</groupId>
+		<artifactId>cucumber-java</artifactId>
+		<version>${cucumber.version}</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+	<dependency>
+		<groupId>io.cucumber</groupId>
+		<artifactId>cucumber-junit</artifactId>
+		<version>${cucumber.version}</version>
+		<scope>test</scope>
+	</dependency>
+		
+
+</dependencies>  
   
 </project>
